# HttpStudy

./: CMakeLists.txt  README.md
public/: home.html  home_style.css  index.html  style.css
src/: db.hpp  http_request.cpp  http_request.hpp  http_response.cpp  http_response.hpp  main.cpp  router.cpp  router.hpp  server.cpp  server.hpp
src/models/: user.hpp
src/orm/: crud.hpp  model.hpp  schema.hpp
src/orm/crud/: delete.hpp  get.hpp  insert.hpp  update.hpp
src/routes/: delete_routes.hpp  get_routes.hpp  post_routes.hpp  put_routes.hpp  routes.hpp  user_routes.hpp  website.hpp
